compiler/test/fail_compilation/widechars.d

/*
DISABLED: win32 win64
TEST_OUTPUT:
---
fail_compilation/widechars.d(12): Error: undefined identifier `wchar_t`, did you mean `dchar`?
wchar_t x;
        ^
---
*/

wchar_t x;
